--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
 
+
   </head>
   <body>
     <div id="app"></div>
@@ -42,7 +43,10 @@
         console.log('Service Worker is not supported by browser.');
       }
     </script>
-
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/8.3.1/firebase-app.js"></script>
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
   </body>
 </html>
 
