--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>Sketchi</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
 
