--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,10 @@
     <link rel="manifest" href="/manifest.json" />
     <title>Sketchi</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
+
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
 
