--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     name="description"
     content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="./favicon.ico">
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>Sketchi</title>
